minor axis spacing fix

--- a/src/styles/components/_Report.scss
+++ b/src/styles/components/_Report.scss
@@ -313,7 +313,7 @@ $selector-box-shadow: 0 2px 2px #383e40;
       min-width: calc(100% - 120px);
     }
     .legend {
-      margin: 4px auto 8px;
+      margin: 0 auto 8px;
       border: 1px solid $color-gray-lightest;
       min-width: 100%;
       width: 100%;
